# openSYDE_Linux

./: .gitignore  README.md
opensyde_syde_coder_c/libs/osy_core/ip_dispatcher/target_linux_sock/: C_OscIpDispatcherLinuxSock.cpp
opensyde_syde_coder_c/libs/osy_core/kefex_diaglib/tgl_windows/: TglFile.cpp
opensyde_syde_coder_c/pjt/: CMakeLists.txt
opensyde_syde_coder_c/src/: C_CodeExport.cpp  precomp_headers.hpp  resources.rc  version_config.hpp
opensyde_syde_coder_c/src/osy_code_exporter/: C_OsyCodeExportBase.cpp  C_OsyCodeExportBase.hpp
opensyde_tool/bat/: build_release.sh  cppcheck.sh
opensyde_tool/doc/: build.txt
opensyde_tool/libs/opensyde_core/: CMakeLists.txt  opensyde_core.pri
opensyde_tool/libs/opensyde_core/can_dispatcher/target_linux_socket_can/: C_Can.cpp
opensyde_tool/libs/opensyde_core/ip_dispatcher/dispatcher/: C_OscIpDispatcher.hpp
opensyde_tool/libs/opensyde_core/ip_dispatcher/target_linux_sock/: C_OscIpDispatcherLinuxSock.hpp
opensyde_tool/libs/opensyde_core/kefex_diaglib/tgl_linux/: CMakeLists.txt  TglFile.cpp
opensyde_tool/libs/opensyde_core/kefex_diaglib/tgl_windows/: CMakeLists.txt
opensyde_tool/libs/opensyde_core/precompiled_headers/: precomp_headers.hpp
opensyde_tool/libs/opensyde_core/scl/: CMakeLists.txt
opensyde_tool/pjt/: openSYDE.pro  openSYDE_CAN_Monitor.pro
opensyde_tool/pjt/CAN_Monitor/: CMakeLists.txt
opensyde_tool/pjt/QCustomPlot_library/: CMakeLists.txt
opensyde_tool/pjt/openSYDE/: CMakeLists.txt
opensyde_tool/pjt/vector_blf_library/: CMakeLists.txt
opensyde_tool/src/: main.cpp  resources.rc  version_config.hpp
opensyde_tool/src/can_monitor/: C_CamMainWindow.cpp  cam_main.cpp
opensyde_tool/src/can_monitor/can_monitor_settings/: C_CamMosDatabaseSelectionPopup.cpp  C_CamMosDatabaseSelectionView.cpp  C_CamMosDllWidget.cpp  C_CamMosFilterPopup.cpp  C_CamMosFilterTableModel.cpp  C_CamMosFilterWidget.cpp  C_CamMosLoggingWidget.cpp
opensyde_tool/src/can_monitor/message_generator/: C_CamGenTableModel.cpp  C_CamGenTableView.cpp
opensyde_tool/src/can_monitor/message_generator/signals/: C_CamGenSigTableModel.cpp
opensyde_tool/src/can_monitor/message_trace/: C_CamMetTreeModel.cpp  C_CamMetTreeView.cpp
opensyde_tool/src/graphic_items/style_setup/: C_GiSyColorBrightnessPicker.hpp  C_GiSyColorSelectWidget.cpp
opensyde_tool/src/graphic_items/system_view_items/: C_GiSvPc.cpp
opensyde_tool/src/graphic_items/system_view_items/dashboard/: C_GiSvDaRectBaseGroup.cpp  C_GiSvDaSpinBoxBase.cpp
opensyde_tool/src/help_engine/: C_HeHandler.cpp  C_HeHandler.hpp
opensyde_tool/src/implementation/: C_ImpUtil.cpp  C_ImpUtil.hpp
opensyde_tool/src/navigable_gui/: C_NagAboutDialog.cpp  C_NagMainWidget.cpp  C_NagMainWindow.cpp  C_NagNaviBarWidget.cpp  C_NagViewList.cpp
opensyde_tool/src/navigable_gui/unused_project_files/: C_NagUnUsedProjectFilesTableView.cpp
opensyde_tool/src/opensyde_gui_elements/: C_OgeListViewToolTipBase.cpp  C_OgeListWidgetToolTipBase.cpp  C_OgePopUpDialog.cpp  C_OgePopUpDialog.hpp  C_OgeTableWidgetComIf.cpp  C_OgeTreeToolTipBase.cpp
opensyde_tool/src/opensyde_gui_elements/combo_box/: C_OgeCbxMultiSelect.cpp
opensyde_tool/src/opensyde_gui_elements/line_edit/: C_OgeLeContextMenuBase.cpp
opensyde_tool/src/opensyde_gui_elements/spin_box/: C_OgeSpxDoubleToolTipBase.cpp  C_OgeSpxInt64.cpp  C_OgeSpxInt64AutoFix.cpp  C_OgeSpxInt64ToolTipBase.cpp  C_OgeSpxToolTipBase.cpp
opensyde_tool/src/opensyde_gui_elements/text_browser/: C_OgeTebContextMenuBase.cpp
opensyde_tool/src/opensyde_gui_elements/text_edit/: C_OgeTedContextMenuBase.cpp
opensyde_tool/src/opensyde_gui_elements/widget/: C_OgeWiHover.cpp  C_OgeWiUtil.cpp
opensyde_tool/src/precompiled_headers/can_monitor/: precomp_headers.hpp
opensyde_tool/src/precompiled_headers/gui/: precomp_headers.hpp
opensyde_tool/src/project_gui/: C_PuiProject.cpp
opensyde_tool/src/scene_base/: C_SebBaseContextMenuManager.cpp
opensyde_tool/src/system_definition/: C_SdTopologyWidget.cpp
opensyde_tool/src/system_definition/bus_edit/: C_SdBueMessageSelectorTreeWidget.cpp  C_SdBueMessageSelectorTreeWidget.hpp  C_SdBueMessageSelectorWidget.cpp  C_SdBueMessageTableModel.cpp
opensyde_tool/src/system_definition/bus_edit/canopen/: C_SdBueCoAddSignalsView.cpp
opensyde_tool/src/system_definition/bus_edit/j1939/: C_SdBueJ1939AddMessagesFromCatalogDialog.cpp
opensyde_tool/src/system_definition/node_edit/: C_SdNdeIpAddressConfigurationWidget.hpp  C_SdNdeLeIpAddressWidget.cpp  C_SdNdeNodePropertiesWidget.cpp
opensyde_tool/src/system_definition/node_edit/canopen_manager/: C_SdNdeCoConfigTreeView.cpp
opensyde_tool/src/system_definition/node_edit/data_blocks/: C_SdNdeDbProperties.cpp  C_SdNdeDbProperties.hpp
opensyde_tool/src/system_definition/node_edit/datapools/: C_SdNdeDpContentUtil.cpp  C_SdNdeDpListDataSetWidget.cpp  C_SdNdeDpListHeaderWidget.cpp  C_SdNdeDpListTableDelegate.cpp  C_SdNdeDpListTableHeaderView.cpp  C_SdNdeDpListTableHeaderView.hpp  C_SdNdeDpListTableModel.cpp  C_SdNdeDpListTableView.cpp  C_SdNdeDpListsTreeWidget.cpp  C_SdNdeDpProperties.cpp  (+2 more)
opensyde_tool/src/system_views/communication/: C_SyvComDriverDiag.cpp  C_SyvComDriverDiag.hpp  C_SyvComDriverUtil.cpp  C_SyvComDriverUtil.hpp
opensyde_tool/src/system_views/dashboards/: C_SyvDaContextMenuManager.cpp  C_SyvDaDashboardWidget.cpp  C_SyvDaTearOffWidget.cpp
opensyde_tool/src/system_views/device_configuration/: C_SyvDcConnectedNodeList.cpp  C_SyvDcConnectedNodeList.hpp  C_SyvDcSequences.cpp  C_SyvDcSequences.hpp
opensyde_tool/src/system_views/system_setup/: C_SyvSeDllConfigurationDialog.cpp
opensyde_tool/src/system_views/system_update/: C_SyvUpInformationWidget.cpp  C_SyvUpInformationWidget.hpp  C_SyvUpSequences.cpp  C_SyvUpSequences.hpp  C_SyvUpSummaryWidget.cpp  C_SyvUpSummaryWidget.hpp
opensyde_tool/src/table_base/: C_TblEditLineEditBase.cpp  C_TblModelAction.cpp  C_TblViewInteraction.cpp  C_TblViewToolTipBase.cpp
opensyde_tool/src/table_base/tree_base/: C_TblTreDataElementView.cpp  C_TblTreMultiColumnLeafSortFilter.cpp
opensyde_tool/src/util/: C_Uti.cpp
(+9 files in other folders)
