cmake_minimum_required(VERSION 3.5)

project(openSYDE_CAN_Monitor VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

ADD_DEFINITIONS(-DQT_NO_KEYWORDS)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Svg)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Svg)
find_package(ZLIB REQUIRED) #needed by BLF library

# Set include directories before dragging in core; the core needs the "precomp_header.h" and files included by it
include_directories(
   #for Linux libs/gettext is not added as it is used from system folders
   ../../libs/blf_driver_library
   ../../libs/dbc_driver_library/src
   ../../libs/dbc_driver_library/src/Vector
   ../../libs/flexlexer
   ../../src
   ../../src/can_monitor
   ../../src/can_monitor/can_monitor_gui_elements
   ../../src/can_monitor/can_monitor_gui_elements/check_box
   ../../src/can_monitor/can_monitor_gui_elements/combo_box
   ../../src/can_monitor/can_monitor_gui_elements/group_box
   ../../src/can_monitor/can_monitor_gui_elements/label
   ../../src/can_monitor/can_monitor_gui_elements/line_edit
   ../../src/can_monitor/can_monitor_gui_elements/menu
   ../../src/can_monitor/can_monitor_gui_elements/push_button
   ../../src/can_monitor/can_monitor_gui_elements/spin_box
   ../../src/can_monitor/can_monitor_gui_elements/splitter
   ../../src/can_monitor/can_monitor_gui_elements/tool_button
   ../../src/can_monitor/can_monitor_gui_elements/widget
   ../../src/can_monitor/can_monitor_settings
   ../../src/can_monitor/data_base
   ../../src/can_monitor/message_generator
   ../../src/can_monitor/message_generator/signals
   ../../src/can_monitor/message_trace
   ../../src/can_monitor/project
   ../../src/can_monitor/table_base
   ../../src/can_monitor/user_settings
   ../../src/can_monitor/util
   ../../src/com_import_export
   ../../src/gettext
   ../../src/help_engine
   ../../src/navigable_gui
   ../../src/opensyde_gui_elements
   ../../src/opensyde_gui_elements/check_box
   ../../src/opensyde_gui_elements/combo_box
   ../../src/opensyde_gui_elements/frame
   ../../src/opensyde_gui_elements/group_box
   ../../src/opensyde_gui_elements/label
   ../../src/opensyde_gui_elements/line_edit
   ../../src/opensyde_gui_elements/menu
   ../../src/opensyde_gui_elements/push_button
   ../../src/opensyde_gui_elements/radio_button
   ../../src/opensyde_gui_elements/scroll_area
   ../../src/opensyde_gui_elements/spin_box
   ../../src/opensyde_gui_elements/splitter
   ../../src/opensyde_gui_elements/text_browser
   ../../src/opensyde_gui_elements/text_edit
   ../../src/opensyde_gui_elements/tool_button
   ../../src/opensyde_gui_elements/widget
   ../../src/precompiled_headers/can_monitor
   ../../src/project_operations
   ../../src/system_definition
   ../../src/system_definition/node_edit/datapools
   ../../src/system_views/communication
   ../../src/table_base
   ../../src/table_base/tree_base
   ../../src/util
)

# Include openSYDE core library
set(OPENSYDE_CORE_SKIP_CODE_GENERATION  1)
set(OPENSYDE_CORE_SKIP_ZIPPING 1)
set(OPENSYDE_CORE_SKIP_PROTOCOL_DRIVERS 1)
set(OPENSYDE_CORE_SKIP_IMPORTS 1)
add_subdirectory(../../libs/opensyde_core ${CMAKE_BINARY_DIR}/opensyde_core)

set(PROJECT_SOURCES
    ../../libs/blf_driver_library/BLF.h
    ../../libs/blf_driver_library/BLF/AbstractFile.h
    ../../libs/blf_driver_library/BLF/AfdxFrame.h
    ../../libs/blf_driver_library/BLF/AfdxStatistic.h
    ../../libs/blf_driver_library/BLF/AppText.h
    ../../libs/blf_driver_library/BLF/AppTrigger.h
    ../../libs/blf_driver_library/BLF/CanDriverError.h
    ../../libs/blf_driver_library/BLF/CanDriverErrorExt.h
    ../../libs/blf_driver_library/BLF/CanDriverHwSync.h
    ../../libs/blf_driver_library/BLF/CanDriverStatistic.h
    ../../libs/blf_driver_library/BLF/CanErrorFrame.h
    ../../libs/blf_driver_library/BLF/CanErrorFrameExt.h
    ../../libs/blf_driver_library/BLF/CanFdErrorFrame64.h
    ../../libs/blf_driver_library/BLF/CanFdMessage.h
    ../../libs/blf_driver_library/BLF/CanFdMessage64.h
    ../../libs/blf_driver_library/BLF/CanMessage.h
    ../../libs/blf_driver_library/BLF/CanMessage2.h
    ../../libs/blf_driver_library/BLF/CanOverloadFrame.h
    ../../libs/blf_driver_library/BLF/CompressedFile.h
    ../../libs/blf_driver_library/BLF/Doxygen.h
    ../../libs/blf_driver_library/BLF/DriverOverrun.h
    ../../libs/blf_driver_library/BLF/EnvironmentVariable.h
    ../../libs/blf_driver_library/BLF/EthernetFrame.h
    ../../libs/blf_driver_library/BLF/EthernetRxError.h
    ../../libs/blf_driver_library/BLF/EthernetStatus.h
    ../../libs/blf_driver_library/BLF/EventComment.h
    ../../libs/blf_driver_library/BLF/Exceptions.h
    ../../libs/blf_driver_library/BLF/File.h
    ../../libs/blf_driver_library/BLF/FileStatistics.h
    ../../libs/blf_driver_library/BLF/FlexRayData.h
    ../../libs/blf_driver_library/BLF/FlexRayStatusEvent.h
    ../../libs/blf_driver_library/BLF/FlexRaySync.h
    ../../libs/blf_driver_library/BLF/FlexRayV6Message.h
    ../../libs/blf_driver_library/BLF/FlexRayV6StartCycleEvent.h
    ../../libs/blf_driver_library/BLF/FlexRayVFrError.h
    ../../libs/blf_driver_library/BLF/FlexRayVFrReceiveMsg.h
    ../../libs/blf_driver_library/BLF/FlexRayVFrReceiveMsgEx.h
    ../../libs/blf_driver_library/BLF/FlexRayVFrStartCycle.h
    ../../libs/blf_driver_library/BLF/FlexRayVFrStatus.h
    ../../libs/blf_driver_library/BLF/GlobalMarker.h
    ../../libs/blf_driver_library/BLF/GpsEvent.h
    ../../libs/blf_driver_library/BLF/J1708Message.h
    ../../libs/blf_driver_library/BLF/KLineStatusEvent.h
    ../../libs/blf_driver_library/BLF/LinBaudrateEvent.h
    ../../libs/blf_driver_library/BLF/LinBusEvent.h
    ../../libs/blf_driver_library/BLF/LinChecksumInfo.h
    ../../libs/blf_driver_library/BLF/LinCrcError.h
    ../../libs/blf_driver_library/BLF/LinCrcError2.h
    ../../libs/blf_driver_library/BLF/LinDatabyteTimestampEvent.h
    ../../libs/blf_driver_library/BLF/LinDisturbanceEvent.h
    ../../libs/blf_driver_library/BLF/LinDlcInfo.h
    ../../libs/blf_driver_library/BLF/LinLongDomSignalEvent.h
    ../../libs/blf_driver_library/BLF/LinLongDomSignalEvent2.h
    ../../libs/blf_driver_library/BLF/LinMessage.h
    ../../libs/blf_driver_library/BLF/LinMessage2.h
    ../../libs/blf_driver_library/BLF/LinMessageDescriptor.h
    ../../libs/blf_driver_library/BLF/LinReceiveError.h
    ../../libs/blf_driver_library/BLF/LinReceiveError2.h
    ../../libs/blf_driver_library/BLF/LinSchedulerModeChange.h
    ../../libs/blf_driver_library/BLF/LinSendError.h
    ../../libs/blf_driver_library/BLF/LinSendError2.h
    ../../libs/blf_driver_library/BLF/LinShortOrSlowResponse.h
    ../../libs/blf_driver_library/BLF/LinSlaveTimeout.h
    ../../libs/blf_driver_library/BLF/LinSleepModeEvent.h
    ../../libs/blf_driver_library/BLF/LinSpikeEvent.h
    ../../libs/blf_driver_library/BLF/LinSpikeEvent2.h
    ../../libs/blf_driver_library/BLF/LinStatisticEvent.h
    ../../libs/blf_driver_library/BLF/LinSyncError.h
    ../../libs/blf_driver_library/BLF/LinSyncError2.h
    ../../libs/blf_driver_library/BLF/LinSynchFieldEvent.h
    ../../libs/blf_driver_library/BLF/LinUnexpectedWakeup.h
    ../../libs/blf_driver_library/BLF/LinWakeupEvent.h
    ../../libs/blf_driver_library/BLF/LinWakeupEvent2.h
    ../../libs/blf_driver_library/BLF/LogContainer.h
    ../../libs/blf_driver_library/BLF/Most150AllocTab.h
    ../../libs/blf_driver_library/BLF/Most150Message.h
    ../../libs/blf_driver_library/BLF/Most150MessageFragment.h
    ../../libs/blf_driver_library/BLF/Most150Pkt.h
    ../../libs/blf_driver_library/BLF/Most150PktFragment.h
    ../../libs/blf_driver_library/BLF/Most50Message.h
    ../../libs/blf_driver_library/BLF/Most50Pkt.h
    ../../libs/blf_driver_library/BLF/MostAllocTab.h
    ../../libs/blf_driver_library/BLF/MostCtrl.h
    ../../libs/blf_driver_library/BLF/MostDataLost.h
    ../../libs/blf_driver_library/BLF/MostEcl.h
    ../../libs/blf_driver_library/BLF/MostEthernetPkt.h
    ../../libs/blf_driver_library/BLF/MostEthernetPktFragment.h
    ../../libs/blf_driver_library/BLF/MostGenReg.h
    ../../libs/blf_driver_library/BLF/MostHwMode.h
    ../../libs/blf_driver_library/BLF/MostLightLock.h
    ../../libs/blf_driver_library/BLF/MostNetState.h
    ../../libs/blf_driver_library/BLF/MostPkt.h
    ../../libs/blf_driver_library/BLF/MostPkt2.h
    ../../libs/blf_driver_library/BLF/MostReg.h
    ../../libs/blf_driver_library/BLF/MostSpy.h
    ../../libs/blf_driver_library/BLF/MostStatistic.h
    ../../libs/blf_driver_library/BLF/MostStatisticEx.h
    ../../libs/blf_driver_library/BLF/MostStress.h
    ../../libs/blf_driver_library/BLF/MostSystemEvent.h
    ../../libs/blf_driver_library/BLF/MostTrigger.h
    ../../libs/blf_driver_library/BLF/MostTxLight.h
    ../../libs/blf_driver_library/BLF/ObjectHeader.h
    ../../libs/blf_driver_library/BLF/ObjectHeader2.h
    ../../libs/blf_driver_library/BLF/ObjectHeaderBase.h
    ../../libs/blf_driver_library/BLF/RealtimeClock.h
    ../../libs/blf_driver_library/BLF/SerialEvent.h
    ../../libs/blf_driver_library/BLF/SystemVariable.h
    ../../libs/blf_driver_library/BLF/UncompressedFile.h
    ../../libs/blf_driver_library/BLF/VectorTypes.h
    ../../libs/blf_driver_library/BLF/WlanFrame.h
    ../../libs/blf_driver_library/BLF/WlanStatistic.h
    ../../libs/blf_driver_library/BLF/config.h
    ../../libs/blf_driver_library/BLF/platform.h
    ../../libs/blf_driver_library/BLF/vector_blf_export.h
    ../../libs/dbc_driver_library/src/Vector/DBC.h
    ../../libs/dbc_driver_library/src/Vector/DBC/Attribute.h
    ../../libs/dbc_driver_library/src/Vector/DBC/AttributeDefinition.cpp
    ../../libs/dbc_driver_library/src/Vector/DBC/AttributeDefinition.h
    ../../libs/dbc_driver_library/src/Vector/DBC/AttributeObjectType.h
    ../../libs/dbc_driver_library/src/Vector/DBC/AttributeRelation.cpp
    ../../libs/dbc_driver_library/src/Vector/DBC/AttributeRelation.h
    ../../libs/dbc_driver_library/src/Vector/DBC/AttributeValueType.cpp
    ../../libs/dbc_driver_library/src/Vector/DBC/AttributeValueType.h
    ../../libs/dbc_driver_library/src/Vector/DBC/BitTiming.cpp
    ../../libs/dbc_driver_library/src/Vector/DBC/BitTiming.h
    ../../libs/dbc_driver_library/src/Vector/DBC/ByteOrder.h
    ../../libs/dbc_driver_library/src/Vector/DBC/EnvironmentVariable.cpp
    ../../libs/dbc_driver_library/src/Vector/DBC/EnvironmentVariable.h
    ../../libs/dbc_driver_library/src/Vector/DBC/ExtendedMultiplexor.h
    ../../libs/dbc_driver_library/src/Vector/DBC/Message.cpp
    ../../libs/dbc_driver_library/src/Vector/DBC/Message.h
    ../../libs/dbc_driver_library/src/Vector/DBC/Network.cpp
    ../../libs/dbc_driver_library/src/Vector/DBC/Network.h
    ../../libs/dbc_driver_library/src/Vector/DBC/Node.h
    ../../libs/dbc_driver_library/src/Vector/DBC/Parser.cpp
    ../../libs/dbc_driver_library/src/Vector/DBC/Parser.hpp
    ../../libs/dbc_driver_library/src/Vector/DBC/Scanner.cpp
    ../../libs/dbc_driver_library/src/Vector/DBC/Scanner.h
    ../../libs/dbc_driver_library/src/Vector/DBC/Signal.cpp
    ../../libs/dbc_driver_library/src/Vector/DBC/Signal.h
    ../../libs/dbc_driver_library/src/Vector/DBC/SignalGroup.cpp
    ../../libs/dbc_driver_library/src/Vector/DBC/SignalGroup.h
    ../../libs/dbc_driver_library/src/Vector/DBC/SignalType.cpp
    ../../libs/dbc_driver_library/src/Vector/DBC/SignalType.h
    ../../libs/dbc_driver_library/src/Vector/DBC/ValueDescriptions.h
    ../../libs/dbc_driver_library/src/Vector/DBC/ValueTable.cpp
    ../../libs/dbc_driver_library/src/Vector/DBC/ValueTable.h
    ../../libs/dbc_driver_library/src/Vector/DBC/ValueType.h
    ../../libs/dbc_driver_library/src/Vector/DBC/location.hh
    ../../libs/dbc_driver_library/src/Vector/DBC/platform.cpp
    ../../libs/dbc_driver_library/src/Vector/DBC/platform.h
    ../../libs/dbc_driver_library/src/Vector/DBC/position.hh
    ../../libs/dbc_driver_library/src/Vector/DBC/stack.hh
    ../../libs/dbc_driver_library/src/Vector/DBC/vector_dbc_export.h
    ../../libs/flexlexer/FlexLexer.h
    ../../src/can_monitor/C_CamComDriverBase.cpp
    ../../src/can_monitor/C_CamComDriverBase.hpp
    ../../src/can_monitor/C_CamMainWindow.cpp
    ../../src/can_monitor/C_CamMainWindow.hpp
    ../../src/can_monitor/C_CamMainWindow.ui
    ../../src/can_monitor/C_CamTitleBarWidget.cpp
    ../../src/can_monitor/C_CamTitleBarWidget.hpp
    ../../src/can_monitor/C_CamTitleBarWidget.ui
    ../../src/can_monitor/cam_constants.hpp
    ../../src/can_monitor/cam_main.cpp
    ../../src/can_monitor/can_monitor_gui_elements/check_box/C_CamOgeChxSettings.cpp
    ../../src/can_monitor/can_monitor_gui_elements/check_box/C_CamOgeChxSettings.hpp
    ../../src/can_monitor/can_monitor_gui_elements/combo_box/C_CamOgeCbxDark.cpp
    ../../src/can_monitor/can_monitor_gui_elements/combo_box/C_CamOgeCbxDark.hpp
    ../../src/can_monitor/can_monitor_gui_elements/combo_box/C_CamOgeCbxTable.cpp
    ../../src/can_monitor/can_monitor_gui_elements/combo_box/C_CamOgeCbxTable.hpp
    ../../src/can_monitor/can_monitor_gui_elements/combo_box/C_CamOgeCbxTableSmall.cpp
    ../../src/can_monitor/can_monitor_gui_elements/combo_box/C_CamOgeCbxTableSmall.hpp
    ../../src/can_monitor/can_monitor_gui_elements/combo_box/C_CamOgeCbxWhite.cpp
    ../../src/can_monitor/can_monitor_gui_elements/combo_box/C_CamOgeCbxWhite.hpp
    ../../src/can_monitor/can_monitor_gui_elements/group_box/C_CamOgeGbxMessageGeneratorBackground.cpp
    ../../src/can_monitor/can_monitor_gui_elements/group_box/C_CamOgeGbxMessageGeneratorBackground.hpp
    ../../src/can_monitor/can_monitor_gui_elements/group_box/C_CamOgeGbxMessageSignalsBorder.cpp
    ../../src/can_monitor/can_monitor_gui_elements/group_box/C_CamOgeGbxMessageSignalsBorder.hpp
    ../../src/can_monitor/can_monitor_gui_elements/label/C_CamOgeLabStatusBar.cpp
    ../../src/can_monitor/can_monitor_gui_elements/label/C_CamOgeLabStatusBar.hpp
    ../../src/can_monitor/can_monitor_gui_elements/line_edit/C_CamOgeLeFilePath.cpp
    ../../src/can_monitor/can_monitor_gui_elements/line_edit/C_CamOgeLeFilePath.hpp
    ../../src/can_monitor/can_monitor_gui_elements/line_edit/C_CamOgeLeIdPopUp.cpp
    ../../src/can_monitor/can_monitor_gui_elements/line_edit/C_CamOgeLeIdPopUp.hpp
    ../../src/can_monitor/can_monitor_gui_elements/line_edit/C_CamOgeLeTableEdit.cpp
    ../../src/can_monitor/can_monitor_gui_elements/line_edit/C_CamOgeLeTableEdit.hpp
    ../../src/can_monitor/can_monitor_gui_elements/menu/C_CamOgeMuRecentProjects.cpp
    ../../src/can_monitor/can_monitor_gui_elements/menu/C_CamOgeMuRecentProjects.hpp
    ../../src/can_monitor/can_monitor_gui_elements/push_button/C_CamOgePubAbout.cpp
    ../../src/can_monitor/can_monitor_gui_elements/push_button/C_CamOgePubAbout.hpp
    ../../src/can_monitor/can_monitor_gui_elements/push_button/C_CamOgePubDarkBrowse.cpp
    ../../src/can_monitor/can_monitor_gui_elements/push_button/C_CamOgePubDarkBrowse.hpp
    ../../src/can_monitor/can_monitor_gui_elements/push_button/C_CamOgePubPathVariables.cpp
    ../../src/can_monitor/can_monitor_gui_elements/push_button/C_CamOgePubPathVariables.hpp
    ../../src/can_monitor/can_monitor_gui_elements/push_button/C_CamOgePubProjOp.cpp
    ../../src/can_monitor/can_monitor_gui_elements/push_button/C_CamOgePubProjOp.hpp
    ../../src/can_monitor/can_monitor_gui_elements/push_button/C_CamOgePubSettingsAdd.cpp
    ../../src/can_monitor/can_monitor_gui_elements/push_button/C_CamOgePubSettingsAdd.hpp
    ../../src/can_monitor/can_monitor_gui_elements/spin_box/C_CamOgeSpxProperties.cpp
    ../../src/can_monitor/can_monitor_gui_elements/spin_box/C_CamOgeSpxProperties.hpp
    ../../src/can_monitor/can_monitor_gui_elements/splitter/C_CamOgeSpi.cpp
    ../../src/can_monitor/can_monitor_gui_elements/splitter/C_CamOgeSpi.hpp
    ../../src/can_monitor/can_monitor_gui_elements/tool_button/C_CamOgeTobRecentProjects.cpp
    ../../src/can_monitor/can_monitor_gui_elements/tool_button/C_CamOgeTobRecentProjects.hpp
    ../../src/can_monitor/can_monitor_gui_elements/widget/C_CamOgeWiSectionHeader.cpp
    ../../src/can_monitor/can_monitor_gui_elements/widget/C_CamOgeWiSectionHeader.hpp
    ../../src/can_monitor/can_monitor_gui_elements/widget/C_CamOgeWiSectionHeader.ui
    ../../src/can_monitor/can_monitor_gui_elements/widget/C_CamOgeWiSettingSubSection.cpp
    ../../src/can_monitor/can_monitor_gui_elements/widget/C_CamOgeWiSettingSubSection.hpp
    ../../src/can_monitor/can_monitor_gui_elements/widget/C_CamOgeWiSettingSubSection.ui
    ../../src/can_monitor/can_monitor_gui_elements/widget/C_CamOgeWiSpinBoxGroupTable.cpp
    ../../src/can_monitor/can_monitor_gui_elements/widget/C_CamOgeWiSpinBoxGroupTable.hpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosDatabaseBusSelectionPopup.cpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosDatabaseBusSelectionPopup.hpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosDatabaseBusSelectionPopup.ui
    ../../src/can_monitor/can_monitor_settings/C_CamMosDatabaseItemWidget.cpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosDatabaseItemWidget.hpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosDatabaseItemWidget.ui
    ../../src/can_monitor/can_monitor_settings/C_CamMosDatabaseSelectionModel.cpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosDatabaseSelectionModel.hpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosDatabaseSelectionPopup.cpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosDatabaseSelectionPopup.hpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosDatabaseSelectionPopup.ui
    ../../src/can_monitor/can_monitor_settings/C_CamMosDatabaseSelectionView.cpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosDatabaseSelectionView.hpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosDatabaseWidget.cpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosDatabaseWidget.hpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosDatabaseWidget.ui
    ../../src/can_monitor/can_monitor_settings/C_CamMosDllWidget.cpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosDllWidget.hpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosDllWidget.ui
    ../../src/can_monitor/can_monitor_settings/C_CamMosFilterItemWidget.cpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosFilterItemWidget.hpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosFilterItemWidget.ui
    ../../src/can_monitor/can_monitor_settings/C_CamMosFilterPopup.cpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosFilterPopup.hpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosFilterPopup.ui
    ../../src/can_monitor/can_monitor_settings/C_CamMosFilterTableModel.cpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosFilterTableModel.hpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosFilterTableView.cpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosFilterTableView.hpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosFilterWidget.cpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosFilterWidget.hpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosFilterWidget.ui
    ../../src/can_monitor/can_monitor_settings/C_CamMosLoggingWidget.cpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosLoggingWidget.hpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosLoggingWidget.ui
    ../../src/can_monitor/can_monitor_settings/C_CamMosSectionPopup.cpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosSectionPopup.hpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosWidget.cpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosWidget.hpp
    ../../src/can_monitor/can_monitor_settings/C_CamMosWidget.ui
    ../../src/can_monitor/data_base/C_CamDbDbc.cpp
    ../../src/can_monitor/data_base/C_CamDbDbc.hpp
    ../../src/can_monitor/data_base/C_CamDbDbcMessageId.cpp
    ../../src/can_monitor/data_base/C_CamDbDbcMessageId.hpp
    ../../src/can_monitor/data_base/C_CamDbDbcUnmappedMessageId.cpp
    ../../src/can_monitor/data_base/C_CamDbDbcUnmappedMessageId.hpp
    ../../src/can_monitor/data_base/C_CamDbHandler.cpp
    ../../src/can_monitor/data_base/C_CamDbHandler.hpp
    ../../src/can_monitor/data_base/C_CamDbOsy.cpp
    ../../src/can_monitor/data_base/C_CamDbOsy.hpp
    ../../src/can_monitor/data_base/C_CamDbOsyListId.cpp
    ../../src/can_monitor/data_base/C_CamDbOsyListId.hpp
    ../../src/can_monitor/data_base/C_CamDbOsyMessageId.cpp
    ../../src/can_monitor/data_base/C_CamDbOsyMessageId.hpp
    ../../src/can_monitor/message_generator/C_CamGenKeySelect.cpp
    ../../src/can_monitor/message_generator/C_CamGenKeySelect.hpp
    ../../src/can_monitor/message_generator/C_CamGenKeySelect.ui
    ../../src/can_monitor/message_generator/C_CamGenMessagesWidget.cpp
    ../../src/can_monitor/message_generator/C_CamGenMessagesWidget.hpp
    ../../src/can_monitor/message_generator/C_CamGenMessagesWidget.ui
    ../../src/can_monitor/message_generator/C_CamGenTableDelegate.cpp
    ../../src/can_monitor/message_generator/C_CamGenTableDelegate.hpp
    ../../src/can_monitor/message_generator/C_CamGenTableModel.cpp
    ../../src/can_monitor/message_generator/C_CamGenTableModel.hpp
    ../../src/can_monitor/message_generator/C_CamGenTableView.cpp
    ../../src/can_monitor/message_generator/C_CamGenTableView.hpp
    ../../src/can_monitor/message_generator/C_CamGenWidget.cpp
    ../../src/can_monitor/message_generator/C_CamGenWidget.hpp
    ../../src/can_monitor/message_generator/C_CamGenWidget.ui
    ../../src/can_monitor/message_generator/signals/C_CamGenSigTableDelegate.cpp
    ../../src/can_monitor/message_generator/signals/C_CamGenSigTableDelegate.hpp
    ../../src/can_monitor/message_generator/signals/C_CamGenSigTableModel.cpp
    ../../src/can_monitor/message_generator/signals/C_CamGenSigTableModel.hpp
    ../../src/can_monitor/message_generator/signals/C_CamGenSigTableView.cpp
    ../../src/can_monitor/message_generator/signals/C_CamGenSigTableView.hpp
    ../../src/can_monitor/message_generator/signals/C_CamGenSigUtil.cpp
    ../../src/can_monitor/message_generator/signals/C_CamGenSigUtil.hpp
    ../../src/can_monitor/message_generator/signals/C_CamGenSigWidget.cpp
    ../../src/can_monitor/message_generator/signals/C_CamGenSigWidget.hpp
    ../../src/can_monitor/message_generator/signals/C_CamGenSigWidget.ui
    ../../src/can_monitor/message_trace/C_CamMetClipBoardHelper.cpp
    ../../src/can_monitor/message_trace/C_CamMetClipBoardHelper.hpp
    ../../src/can_monitor/message_trace/C_CamMetControlBarWidget.cpp
    ../../src/can_monitor/message_trace/C_CamMetControlBarWidget.hpp
    ../../src/can_monitor/message_trace/C_CamMetControlBarWidget.ui
    ../../src/can_monitor/message_trace/C_CamMetSettingsPopup.cpp
    ../../src/can_monitor/message_trace/C_CamMetSettingsPopup.hpp
    ../../src/can_monitor/message_trace/C_CamMetSettingsPopup.ui
    ../../src/can_monitor/message_trace/C_CamMetStatusBarWidget.cpp
    ../../src/can_monitor/message_trace/C_CamMetStatusBarWidget.hpp
    ../../src/can_monitor/message_trace/C_CamMetStatusBarWidget.ui
    ../../src/can_monitor/message_trace/C_CamMetTreeDelegate.cpp
    ../../src/can_monitor/message_trace/C_CamMetTreeDelegate.hpp
    ../../src/can_monitor/message_trace/C_CamMetTreeGuiBuffer.cpp
    ../../src/can_monitor/message_trace/C_CamMetTreeGuiBuffer.hpp
    ../../src/can_monitor/message_trace/C_CamMetTreeLoggerData.cpp
    ../../src/can_monitor/message_trace/C_CamMetTreeLoggerData.hpp
    ../../src/can_monitor/message_trace/C_CamMetTreeLoggerDataGreyOutInformation.cpp
    ../../src/can_monitor/message_trace/C_CamMetTreeLoggerDataGreyOutInformation.hpp
    ../../src/can_monitor/message_trace/C_CamMetTreeModel.cpp
    ../../src/can_monitor/message_trace/C_CamMetTreeModel.hpp
    ../../src/can_monitor/message_trace/C_CamMetTreeView.cpp
    ../../src/can_monitor/message_trace/C_CamMetTreeView.hpp
    ../../src/can_monitor/message_trace/C_CamMetUtil.cpp
    ../../src/can_monitor/message_trace/C_CamMetUtil.hpp
    ../../src/can_monitor/message_trace/C_CamMetWidget.cpp
    ../../src/can_monitor/message_trace/C_CamMetWidget.hpp
    ../../src/can_monitor/message_trace/C_CamMetWidget.ui
    ../../src/can_monitor/project/C_CamProClipBoardHelper.cpp
    ../../src/can_monitor/project/C_CamProClipBoardHelper.hpp
    ../../src/can_monitor/project/C_CamProDatabaseData.cpp
    ../../src/can_monitor/project/C_CamProDatabaseData.hpp
    ../../src/can_monitor/project/C_CamProFilterData.cpp
    ../../src/can_monitor/project/C_CamProFilterData.hpp
    ../../src/can_monitor/project/C_CamProHandler.cpp
    ../../src/can_monitor/project/C_CamProHandler.hpp
    ../../src/can_monitor/project/C_CamProHandlerFiler.cpp
    ../../src/can_monitor/project/C_CamProHandlerFiler.hpp
    ../../src/can_monitor/project/C_CamProLoggingData.cpp
    ../../src/can_monitor/project/C_CamProLoggingData.hpp
    ../../src/can_monitor/project/C_CamProMessageData.cpp
    ../../src/can_monitor/project/C_CamProMessageData.hpp
    ../../src/can_monitor/table_base/C_CamTblDelegate.cpp
    ../../src/can_monitor/table_base/C_CamTblDelegate.hpp
    ../../src/can_monitor/user_settings/C_UsFiler.cpp
    ../../src/can_monitor/user_settings/C_UsFiler.hpp
    ../../src/can_monitor/user_settings/C_UsHandler.cpp
    ../../src/can_monitor/user_settings/C_UsHandler.hpp
    ../../src/can_monitor/util/C_CamUti.cpp
    ../../src/can_monitor/util/C_CamUti.hpp
    ../../src/can_monitor/util/C_CamUtiStyleSheets.cpp
    ../../src/can_monitor/util/C_CamUtiStyleSheets.hpp
    ../../src/com_import_export/C_CieConverter.cpp
    ../../src/com_import_export/C_CieConverter.hpp
    ../../src/com_import_export/C_CieImportDbc.cpp
    ../../src/com_import_export/C_CieImportDbc.hpp
    ../../src/constants.hpp
    ../../src/gettext/C_GtGetText.cpp
    ../../src/gettext/C_GtGetText.hpp
    ../../src/help_engine/C_HeHandler.cpp
    ../../src/help_engine/C_HeHandler.hpp
    ../../src/navigable_gui/C_NagAboutDialog.cpp
    ../../src/navigable_gui/C_NagAboutDialog.hpp
    ../../src/navigable_gui/C_NagAboutDialog.ui
    ../../src/navigable_gui/C_NagToolTip.cpp
    ../../src/navigable_gui/C_NagToolTip.hpp
    ../../src/navigable_gui/C_NagToolTip.ui
    ../../src/opensyde_gui_elements/C_OgeContextMenu.cpp
    ../../src/opensyde_gui_elements/C_OgeContextMenu.hpp
    ../../src/opensyde_gui_elements/C_OgeOverlay.cpp
    ../../src/opensyde_gui_elements/C_OgeOverlay.hpp
    ../../src/opensyde_gui_elements/C_OgePopUpDialog.cpp
    ../../src/opensyde_gui_elements/C_OgePopUpDialog.hpp
    ../../src/opensyde_gui_elements/C_OgePopUpDialog.ui
    ../../src/opensyde_gui_elements/C_OgeToolTipBase.cpp
    ../../src/opensyde_gui_elements/C_OgeToolTipBase.hpp
    ../../src/opensyde_gui_elements/C_OgeTransparentScrollArea.cpp
    ../../src/opensyde_gui_elements/C_OgeTransparentScrollArea.hpp
    ../../src/opensyde_gui_elements/C_OgeTreeToolTipBase.cpp
    ../../src/opensyde_gui_elements/C_OgeTreeToolTipBase.hpp
    ../../src/opensyde_gui_elements/C_OgeTreeViewToolTipBase.cpp
    ../../src/opensyde_gui_elements/C_OgeTreeViewToolTipBase.hpp
    ../../src/opensyde_gui_elements/check_box/C_OgeChxProperties.cpp
    ../../src/opensyde_gui_elements/check_box/C_OgeChxProperties.hpp
    ../../src/opensyde_gui_elements/check_box/C_OgeChxToolTipBase.cpp
    ../../src/opensyde_gui_elements/check_box/C_OgeChxToolTipBase.hpp
    ../../src/opensyde_gui_elements/combo_box/C_OgeCbxIconDelegate.cpp
    ../../src/opensyde_gui_elements/combo_box/C_OgeCbxIconDelegate.hpp
    ../../src/opensyde_gui_elements/combo_box/C_OgeCbxIconOnly.cpp
    ../../src/opensyde_gui_elements/combo_box/C_OgeCbxIconOnly.hpp
    ../../src/opensyde_gui_elements/combo_box/C_OgeCbxMultiSelect.cpp
    ../../src/opensyde_gui_elements/combo_box/C_OgeCbxMultiSelect.hpp
    ../../src/opensyde_gui_elements/combo_box/C_OgeCbxResizingView.cpp
    ../../src/opensyde_gui_elements/combo_box/C_OgeCbxResizingView.hpp
    ../../src/opensyde_gui_elements/combo_box/C_OgeCbxTableBase.cpp
    ../../src/opensyde_gui_elements/combo_box/C_OgeCbxTableBase.hpp
    ../../src/opensyde_gui_elements/combo_box/C_OgeCbxText.cpp
    ../../src/opensyde_gui_elements/combo_box/C_OgeCbxText.hpp
    ../../src/opensyde_gui_elements/combo_box/C_OgeCbxToolTipBase.cpp
    ../../src/opensyde_gui_elements/combo_box/C_OgeCbxToolTipBase.hpp
    ../../src/opensyde_gui_elements/frame/C_OgeFraBorder.cpp
    ../../src/opensyde_gui_elements/frame/C_OgeFraBorder.hpp
    ../../src/opensyde_gui_elements/frame/C_OgeFraSeparator.cpp
    ../../src/opensyde_gui_elements/frame/C_OgeFraSeparator.hpp
    ../../src/opensyde_gui_elements/group_box/C_OgeGbx.cpp
    ../../src/opensyde_gui_elements/group_box/C_OgeGbx.hpp
    ../../src/opensyde_gui_elements/group_box/C_OgeGbxHover.cpp
    ../../src/opensyde_gui_elements/group_box/C_OgeGbxHover.hpp
    ../../src/opensyde_gui_elements/group_box/C_OgeGbxMouseMove.cpp
    ../../src/opensyde_gui_elements/group_box/C_OgeGbxMouseMove.hpp
    ../../src/opensyde_gui_elements/group_box/C_OgeGbxToolTip.cpp
    ../../src/opensyde_gui_elements/group_box/C_OgeGbxToolTip.hpp
    ../../src/opensyde_gui_elements/group_box/C_OgeGbxToolTipBase.cpp
    ../../src/opensyde_gui_elements/group_box/C_OgeGbxToolTipBase.hpp
    ../../src/opensyde_gui_elements/group_box/C_OgeGbxTransparent.cpp
    ../../src/opensyde_gui_elements/group_box/C_OgeGbxTransparent.hpp
    ../../src/opensyde_gui_elements/label/C_OgeLabContextMenuBase.cpp
    ../../src/opensyde_gui_elements/label/C_OgeLabContextMenuBase.hpp
    ../../src/opensyde_gui_elements/label/C_OgeLabDescriptionMessage.cpp
    ../../src/opensyde_gui_elements/label/C_OgeLabDescriptionMessage.hpp
    ../../src/opensyde_gui_elements/label/C_OgeLabElided.cpp
    ../../src/opensyde_gui_elements/label/C_OgeLabElided.hpp
    ../../src/opensyde_gui_elements/label/C_OgeLabGenericNoPaddingNoMargins.cpp
    ../../src/opensyde_gui_elements/label/C_OgeLabGenericNoPaddingNoMargins.hpp
    ../../src/opensyde_gui_elements/label/C_OgeLabGroupItem.cpp
    ../../src/opensyde_gui_elements/label/C_OgeLabGroupItem.hpp
    ../../src/opensyde_gui_elements/label/C_OgeLabGroupItemValue.cpp
    ../../src/opensyde_gui_elements/label/C_OgeLabGroupItemValue.hpp
    ../../src/opensyde_gui_elements/label/C_OgeLabHeadingGroupBold.cpp
    ../../src/opensyde_gui_elements/label/C_OgeLabHeadingGroupBold.hpp
    ../../src/opensyde_gui_elements/label/C_OgeLabHeadingMessage.cpp
    ../../src/opensyde_gui_elements/label/C_OgeLabHeadingMessage.hpp
    ../../src/opensyde_gui_elements/label/C_OgeLabHeadingToolTip.cpp
    ../../src/opensyde_gui_elements/label/C_OgeLabHeadingToolTip.hpp
    ../../src/opensyde_gui_elements/label/C_OgeLabPopUpSubTitle.cpp
    ../../src/opensyde_gui_elements/label/C_OgeLabPopUpSubTitle.hpp
    ../../src/opensyde_gui_elements/label/C_OgeLabPopUpTitle.cpp
    ../../src/opensyde_gui_elements/label/C_OgeLabPopUpTitle.hpp
    ../../src/opensyde_gui_elements/label/C_OgeLabSvgOnly.cpp
    ../../src/opensyde_gui_elements/label/C_OgeLabSvgOnly.hpp
    ../../src/opensyde_gui_elements/label/C_OgeLabToolTipBase.cpp
    ../../src/opensyde_gui_elements/label/C_OgeLabToolTipBase.hpp
    ../../src/opensyde_gui_elements/line_edit/C_OgeLeContextMenuBase.cpp
    ../../src/opensyde_gui_elements/line_edit/C_OgeLeContextMenuBase.hpp
    ../../src/opensyde_gui_elements/line_edit/C_OgeLeDark.cpp
    ../../src/opensyde_gui_elements/line_edit/C_OgeLeDark.hpp
    ../../src/opensyde_gui_elements/line_edit/C_OgeLeFilePathBase.cpp
    ../../src/opensyde_gui_elements/line_edit/C_OgeLeFilePathBase.hpp
    ../../src/opensyde_gui_elements/line_edit/C_OgeLeProperties.cpp
    ../../src/opensyde_gui_elements/line_edit/C_OgeLeProperties.hpp
    ../../src/opensyde_gui_elements/line_edit/C_OgeLePropertiesName.cpp
    ../../src/opensyde_gui_elements/line_edit/C_OgeLePropertiesName.hpp
    ../../src/opensyde_gui_elements/line_edit/C_OgeLeToolTipBase.cpp
    ../../src/opensyde_gui_elements/line_edit/C_OgeLeToolTipBase.hpp
    ../../src/opensyde_gui_elements/menu/C_OgeMuSections.cpp
    ../../src/opensyde_gui_elements/menu/C_OgeMuSections.hpp
    ../../src/opensyde_gui_elements/push_button/C_OgePubCancel.cpp
    ../../src/opensyde_gui_elements/push_button/C_OgePubCancel.hpp
    ../../src/opensyde_gui_elements/push_button/C_OgePubConfigure.cpp
    ../../src/opensyde_gui_elements/push_button/C_OgePubConfigure.hpp
    ../../src/opensyde_gui_elements/push_button/C_OgePubDialog.cpp
    ../../src/opensyde_gui_elements/push_button/C_OgePubDialog.hpp
    ../../src/opensyde_gui_elements/push_button/C_OgePubIconOnly.cpp
    ../../src/opensyde_gui_elements/push_button/C_OgePubIconOnly.hpp
    ../../src/opensyde_gui_elements/push_button/C_OgePubIconText.cpp
    ../../src/opensyde_gui_elements/push_button/C_OgePubIconText.hpp
    ../../src/opensyde_gui_elements/push_button/C_OgePubMessageCancel.cpp
    ../../src/opensyde_gui_elements/push_button/C_OgePubMessageCancel.hpp
    ../../src/opensyde_gui_elements/push_button/C_OgePubMessageOk.cpp
    ../../src/opensyde_gui_elements/push_button/C_OgePubMessageOk.hpp
    ../../src/opensyde_gui_elements/push_button/C_OgePubProjAction.cpp
    ../../src/opensyde_gui_elements/push_button/C_OgePubProjAction.hpp
    ../../src/opensyde_gui_elements/push_button/C_OgePubStandard.cpp
    ../../src/opensyde_gui_elements/push_button/C_OgePubStandard.hpp
    ../../src/opensyde_gui_elements/push_button/C_OgePubSvgIconOnly.cpp
    ../../src/opensyde_gui_elements/push_button/C_OgePubSvgIconOnly.hpp
    ../../src/opensyde_gui_elements/push_button/C_OgePubToolTipBase.cpp
    ../../src/opensyde_gui_elements/push_button/C_OgePubToolTipBase.hpp
    ../../src/opensyde_gui_elements/radio_button/C_OgeRabProperties.cpp
    ../../src/opensyde_gui_elements/radio_button/C_OgeRabProperties.hpp
    ../../src/opensyde_gui_elements/radio_button/C_OgeRabToolTipBase.cpp
    ../../src/opensyde_gui_elements/radio_button/C_OgeRabToolTipBase.hpp
    ../../src/opensyde_gui_elements/scroll_area/C_OgeSaMain.cpp
    ../../src/opensyde_gui_elements/scroll_area/C_OgeSaMain.hpp
    ../../src/opensyde_gui_elements/spin_box/C_OgeSpxAllBase.cpp
    ../../src/opensyde_gui_elements/spin_box/C_OgeSpxAllBase.hpp
    ../../src/opensyde_gui_elements/spin_box/C_OgeSpxAutoFixBase.cpp
    ../../src/opensyde_gui_elements/spin_box/C_OgeSpxAutoFixBase.hpp
    ../../src/opensyde_gui_elements/spin_box/C_OgeSpxDoubleAutoFix.cpp
    ../../src/opensyde_gui_elements/spin_box/C_OgeSpxDoubleAutoFix.hpp
    ../../src/opensyde_gui_elements/spin_box/C_OgeSpxDoubleAutoFixCustomTrigger.cpp
    ../../src/opensyde_gui_elements/spin_box/C_OgeSpxDoubleAutoFixCustomTrigger.hpp
    ../../src/opensyde_gui_elements/spin_box/C_OgeSpxDoubleDynamicDecimalsBase.cpp
    ../../src/opensyde_gui_elements/spin_box/C_OgeSpxDoubleDynamicDecimalsBase.hpp
    ../../src/opensyde_gui_elements/spin_box/C_OgeSpxDoubleToolTipBase.cpp
    ../../src/opensyde_gui_elements/spin_box/C_OgeSpxDoubleToolTipBase.hpp
    ../../src/opensyde_gui_elements/spin_box/C_OgeSpxInt64.cpp
    ../../src/opensyde_gui_elements/spin_box/C_OgeSpxInt64.hpp
    ../../src/opensyde_gui_elements/spin_box/C_OgeSpxInt64AutoFix.cpp
    ../../src/opensyde_gui_elements/spin_box/C_OgeSpxInt64AutoFix.hpp
    ../../src/opensyde_gui_elements/spin_box/C_OgeSpxInt64ToolTipBase.cpp
    ../../src/opensyde_gui_elements/spin_box/C_OgeSpxInt64ToolTipBase.hpp
    ../../src/opensyde_gui_elements/spin_box/C_OgeSpxToolTipBase.cpp
    ../../src/opensyde_gui_elements/spin_box/C_OgeSpxToolTipBase.hpp
    ../../src/opensyde_gui_elements/splitter/C_OgeSpiBase.cpp
    ../../src/opensyde_gui_elements/splitter/C_OgeSpiBase.hpp
    ../../src/opensyde_gui_elements/text_browser/C_OgeTebContextMenuBase.cpp
    ../../src/opensyde_gui_elements/text_browser/C_OgeTebContextMenuBase.hpp
    ../../src/opensyde_gui_elements/text_browser/C_OgeTebMessageDetails.cpp
    ../../src/opensyde_gui_elements/text_browser/C_OgeTebMessageDetails.hpp
    ../../src/opensyde_gui_elements/text_edit/C_OgeTedContextMenuBase.cpp
    ../../src/opensyde_gui_elements/text_edit/C_OgeTedContextMenuBase.hpp
    ../../src/opensyde_gui_elements/text_edit/C_OgeTedPropertiesComment.cpp
    ../../src/opensyde_gui_elements/text_edit/C_OgeTedPropertiesComment.hpp
    ../../src/opensyde_gui_elements/text_edit/C_OgeTedToolTipBase.cpp
    ../../src/opensyde_gui_elements/text_edit/C_OgeTedToolTipBase.hpp
    ../../src/opensyde_gui_elements/text_edit/C_OgeTedToolTipContent.cpp
    ../../src/opensyde_gui_elements/text_edit/C_OgeTedToolTipContent.hpp
    ../../src/opensyde_gui_elements/tool_button/C_OgeTobToolTipBase.cpp
    ../../src/opensyde_gui_elements/tool_button/C_OgeTobToolTipBase.hpp
    ../../src/opensyde_gui_elements/widget/C_OgeWiCustomMessage.cpp
    ../../src/opensyde_gui_elements/widget/C_OgeWiCustomMessage.hpp
    ../../src/opensyde_gui_elements/widget/C_OgeWiCustomMessage.ui
    ../../src/opensyde_gui_elements/widget/C_OgeWiError.cpp
    ../../src/opensyde_gui_elements/widget/C_OgeWiError.hpp
    ../../src/opensyde_gui_elements/widget/C_OgeWiError.ui
    ../../src/opensyde_gui_elements/widget/C_OgeWiOnlyBackground.cpp
    ../../src/opensyde_gui_elements/widget/C_OgeWiOnlyBackground.hpp
    ../../src/opensyde_gui_elements/widget/C_OgeWiSpinBoxGroup.cpp
    ../../src/opensyde_gui_elements/widget/C_OgeWiSpinBoxGroup.hpp
    ../../src/opensyde_gui_elements/widget/C_OgeWiSpinBoxGroup.ui
    ../../src/opensyde_gui_elements/widget/C_OgeWiUtil.cpp
    ../../src/opensyde_gui_elements/widget/C_OgeWiUtil.hpp
    ../../src/opensyde_gui_elements/widget/C_OgeWiWithToolTip.cpp
    ../../src/opensyde_gui_elements/widget/C_OgeWiWithToolTip.hpp
    ../../src/project_operations/C_PopErrorHandling.cpp
    ../../src/project_operations/C_PopErrorHandling.hpp
    ../../src/system_definition/C_SdTooltipUtil.cpp
    ../../src/system_definition/C_SdTooltipUtil.hpp
    ../../src/system_definition/node_edit/datapools/C_SdNdeDpContentUtil.cpp
    ../../src/system_definition/node_edit/datapools/C_SdNdeDpContentUtil.hpp
    ../../src/system_views/communication/C_SyvComDriverThread.cpp
    ../../src/system_views/communication/C_SyvComDriverThread.hpp
    ../../src/system_views/communication/C_SyvComMessageLoggerFileBlf.cpp
    ../../src/system_views/communication/C_SyvComMessageLoggerFileBlf.hpp
    ../../src/system_views/communication/C_SyvComMessageMonitor.cpp
    ../../src/system_views/communication/C_SyvComMessageMonitor.hpp
    ../../src/table_base/C_TblDelegate.cpp
    ../../src/table_base/C_TblDelegate.hpp
    ../../src/table_base/C_TblDelegateUtil.cpp
    ../../src/table_base/C_TblDelegateUtil.hpp
    ../../src/table_base/C_TblEditLineEditBase.cpp
    ../../src/table_base/C_TblEditLineEditBase.hpp
    ../../src/table_base/C_TblModelAction.cpp
    ../../src/table_base/C_TblModelAction.hpp
    ../../src/table_base/C_TblViewInteraction.cpp
    ../../src/table_base/C_TblViewInteraction.hpp
    ../../src/table_base/C_TblViewScroll.cpp
    ../../src/table_base/C_TblViewScroll.hpp
    ../../src/table_base/C_TblViewToolTipBase.cpp
    ../../src/table_base/C_TblViewToolTipBase.hpp
    ../../src/table_base/tree_base/C_TblTreDataElementSortFilter.cpp
    ../../src/table_base/tree_base/C_TblTreDataElementSortFilter.hpp
    ../../src/table_base/tree_base/C_TblTreItem.cpp
    ../../src/table_base/tree_base/C_TblTreItem.hpp
    ../../src/table_base/tree_base/C_TblTreModel.cpp
    ../../src/table_base/tree_base/C_TblTreModel.hpp
    ../../src/table_base/tree_base/C_TblTreSimpleItem.cpp
    ../../src/table_base/tree_base/C_TblTreSimpleItem.hpp
    ../../src/table_base/tree_base/C_TblTreSimpleModel.cpp
    ../../src/table_base/tree_base/C_TblTreSimpleModel.hpp
    ../../src/util/C_Uti.cpp
    ../../src/util/C_Uti.hpp
    ../../src/util/C_UtiClipBoardHelper.cpp
    ../../src/util/C_UtiClipBoardHelper.hpp
    ../../src/util/C_UtiFindNameHelper.cpp
    ../../src/util/C_UtiFindNameHelper.hpp
)

# create code from qrc and add to sources
qt_add_resources(PROJECT_SOURCES ../../src/can_monitor/cam_application.qrc)

add_executable(openSYDE_CAN_Monitor
    ${PROJECT_SOURCES}
)

# add required libraries

# add Qt library to core, so precomp_headers.hpp will be able to find Qt headers
# for this we need a policy
cmake_policy(SET CMP0079 NEW)
target_link_libraries(opensyde_core PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)

# add BLF as static library
add_library(blf_library STATIC IMPORTED)
set_target_properties(blf_library PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/../../libs/blf_driver_library/libvector_blf_linux.a)


target_link_libraries(openSYDE_CAN_Monitor PRIVATE opensyde_core blf_library ZLIB::ZLIB Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Svg)

# define precompiled headers for core and application
target_precompile_headers(openSYDE_CAN_Monitor PRIVATE ../../src/precompiled_headers/gui/precomp_headers.hpp)
target_precompile_headers(opensyde_core PRIVATE ../../src/precompiled_headers/gui/precomp_headers.hpp)

set_target_properties(openSYDE_CAN_Monitor PROPERTIES
    # for windows create "WinMain" instead of plain "main"
    WIN32_EXECUTABLE TRUE
)

install(TARGETS openSYDE_CAN_Monitor
    DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../result/tool/CAN_Monitor
)
